--- a/ProyectoInventarioWeb/Views/Shared/_Layout.cshtml
+++ b/ProyectoInventarioWeb/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Nombre de la aplicación", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Inventario Web", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -27,6 +27,8 @@
                     <li>@Html.ActionLink("Contacto", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Productos", "index", "Productos")</li>
                     <li>@Html.ActionLink("Categorias", "index", "Categorias")</li>
+                    <li>@Html.ActionLink("Modelos", "index", "Modelos")</li>
+                    <li>@Html.ActionLink("Marcas", "index", "Marcas")</li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>@Html.ActionLink("Registrate", "Registrar", "Account")</li>
