--- a/ProyectoInventarioWeb/Views/Productos/List.cshtml
+++ b/ProyectoInventarioWeb/Views/Productos/List.cshtml
@@ -15,10 +15,11 @@
             <th scope="col">Existencia</th>
             <th scope="col">Año</th>
             <th scope="col">Descripcion</th>
-            <th scope="col">Categoria</th>
-            <th scope="col">Marca</th>
-            <th scope="col">Modelo</th>
-            <th scope="col">Proveedor</th>
+            @*<th scope="col">Categoria</th>*@
+            @*<th scope="col">Marca</th>
+            <th scope="col">Modelo</th>*@
+            @*<th scope="col">Proveedor</th>*@
+            @*<th scope="col">Fecha</th>*@
             <th scope="col">Opcione</th>
             <th scope="col">Opcione</th>
         </tr>
@@ -35,10 +36,11 @@
             <td>@oPruducto.Existencia</td>
             <td>@oPruducto.Año</td>
             <td>@oPruducto.Descripcion</td>
-            <td>@oPruducto.idCategoria</td>
-            <td>@oPruducto.idMarca</td>
-            <td>@oPruducto.idModelo</td>
-            <td>@oPruducto.idProveedor</td>
+            @*<td>@oPruducto.idCategoria</td>*@
+            @*<td>@oPruducto.idMarca</td>
+            <td>@oPruducto.idModelo</td>*@
+            @*<td>@oPruducto.idProveedor</td>*@
+            @*<td>@oPruducto.Fecha</td>*@
             <td><input type="button" value="Editar" onclick="document.location.href='@Url.Content("~/Productos/Edit/?id= " + oPruducto.ID)'" /></td>
             <td><input type="button" value="Eliminar" onclick="jsDelete(@oPruducto.ID)" /></td>
         </tr>
