Haciendo CRUD Para Modelos

--- a/ProyectoInventarioWeb/Views/Categorias/List.cshtml
+++ b/ProyectoInventarioWeb/Views/Categorias/List.cshtml
@@ -9,7 +9,7 @@
     <thead>
         <tr>
             <th scope="col">ID</th>
-            <th scope="col">Cadigo</th>
+            <th scope="col">Codigo</th>
             <th scope="col">Nombre</th>
         </tr>
     </thead>
