added "Proveedor" Controller and views,

--- a/ProyectoInventarioWeb/Views/Shared/_Layout.cshtml
+++ b/ProyectoInventarioWeb/Views/Shared/_Layout.cshtml
@@ -29,6 +29,7 @@
                     <li>@Html.ActionLink("Categorias", "index", "Categorias")</li>
                     <li>@Html.ActionLink("Modelos", "index", "Modelos")</li>
                     <li>@Html.ActionLink("Marcas", "index", "Marcas")</li>
+                    <li>@Html.ActionLink("Proveedor", "index", "Proveedors")</li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>@Html.ActionLink("Registrate", "Registrar", "Account")</li>
