--- a/ProyectoInventarioWeb/Views/Shared/_Layout.cshtml
+++ b/ProyectoInventarioWeb/Views/Shared/_Layout.cshtml
@@ -30,6 +30,7 @@
                     <li>@Html.ActionLink("Modelos", "index", "Modelos")</li>
                     <li>@Html.ActionLink("Marcas", "index", "Marcas")</li>
                     <li>@Html.ActionLink("Proveedor", "index", "Proveedors")</li>
+                    <li>@Html.ActionLink("Usuarios", "index", "Usuarios")</li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>@Html.ActionLink("Registrate", "Registrar", "Account")</li>
