--- a/ProyectoInventarioWeb/Views/Shared/_Layout.cshtml
+++ b/ProyectoInventarioWeb/Views/Shared/_Layout.cshtml
@@ -33,8 +33,9 @@
                     <li>@Html.ActionLink("Usuarios", "index", "Usuarios")</li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li>@Html.ActionLink("Registrate", "Registrar", "Account")</li>
-                    <li>@Html.ActionLink("Iniciar Session", "Login", "Account")</li>
+                    <li>@Html.ActionLink("Registro", "Registrar", "Account")</li>
+                    <li>@Html.ActionLink("Iniciar", "Login", "Acceso")</li>
+                    <li>@Html.ActionLink("Salir", "LogOut", "Acceso")</li>
                 </ul>
             </div>
 
