--- a/ProyectoInventarioWeb/Views/Shared/_LayoutPageLogin.cshtml
+++ b/ProyectoInventarioWeb/Views/Shared/_LayoutPageLogin.cshtml
@@ -1,9 +1,8 @@
 ﻿<!DOCTYPE html>
+
 <html>
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title - Mi aplicación ASP.NET</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
@@ -22,18 +21,10 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Acerca de", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contacto", "Contact", "Home")</li>
-                    <li>@Html.ActionLink("Productos", "index", "Productos")</li>
-                    <li>@Html.ActionLink("Categorias", "index", "Categorias")</li>
-                    <li>@Html.ActionLink("Modelos", "index", "Modelos")</li>
-                    <li>@Html.ActionLink("Marcas", "index", "Marcas")</li>
-                    <li>@Html.ActionLink("Proveedor", "index", "Proveedors")</li>
-                    <li>@Html.ActionLink("Usuarios", "index", "Usuarios")</li>
+
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li>@Html.ActionLink("Salir", "LogOut", "Acceso")</li>
+
                 </ul>
             </div>
 
