--- a/ProyectoInventarioWeb/Views/Acceso/Login.cshtml
+++ b/ProyectoInventarioWeb/Views/Acceso/Login.cshtml
@@ -1,35 +1,84 @@
 ﻿
 @{
     ViewBag.Title = "Login";
-    Layout = "~/Views/Shared/_LayoutPageLogin.cshtml";
+    Layout = null;
 }
-
-<h2>Login</h2>
-<h2>Digite sus datos para Ingresar</h2>
-<br />
-<div class="row">
-    <div>
-        @ViewBag.Error
-    </div><br />
-    <form id="frm" action="@Url.Content("~/Acceso/Login")" method="post">
-        <div class="col-lg-6 col-lg-offset-3" align="justify">
-            <table>
-                <tr>
-                    <td>Email</td>
-                    <td><input type="email" name="email" /></td>
-                    
-                </tr>
-                <tr><td>&nbsp;</td></tr>
-                <tr>
-                    <td>Password&nbsp;</td>
-                    <td><input type="password" name="pass" /></td>
-                </tr>
-            </table>
-            <br />
-            <input type="submit" class="btn btn-success" value="Ingresar" />
-            <br />
-            @Html.ActionLink("Crear una cuenta para ingresar", "Registrar", "Account")
+<head>
+    <title>Login</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <!-- vinculo a bootstrap -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <!-- Temas-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+</head>
+<body>
+    <br />
+    <div id="Contenedor">
+        <div id="errorView">
+            @ViewBag.Error
+        </div><br />
+        <div class="Icon">
+            <span class="glyphicon glyphicon-user"></span>
         </div>
-    </form>
-</div>
+        <div class="ContentForm">
+            <form action="@Url.Content("~/Acceso/Login")" method="post" name="FormEntrar">
+                <div class="input-group input-group-lg">
+                    <span class="input-group-addon" id="sizing-addon1"><i class="glyphicon glyphicon-envelope"></i></span>
+                    <input type="email" class="form-control" name="email" placeholder="Correo" id="Correo" aria-describedby="sizing-addon1" required>
+                </div>
+                <br>
+                <div class="input-group input-group-lg">
+                    <span class="input-group-addon" id="sizing-addon1"><i class="glyphicon glyphicon-lock"></i></span>
+                    <input type="password" name="pass" class="form-control" placeholder="******" aria-describedby="sizing-addon1" required>
+                </div>
+                <br>
+                <button class="btn btn-lg btn-primary btn-block btn-signin" id="IngresoLog" type="submit">Ingresar</button>
+                <div class="opcioncontra">@Html.ActionLink("Crear una cuenta para ingresar", "Registrar", "Account")</div>
+            </form>
+        </div>
+    </div>
+</body>
+<style>
 
+    body {
+        font-size: 12px;
+        background: rgba(0, 0, 0, 0.50);
+    }
+
+    #Contenedor {
+        width: 400px;
+        margin: 50px auto;
+        background-color: #F3EDED;
+        border: 1px solid #ECE8E8;
+        height: 400px;
+        border-radius: 8px;
+        padding: 0px 9px 0px 9px;
+    }
+
+    .Icon span {
+        background: #A8A6A6;
+        padding: 20px;
+        border-radius: 120px;
+    }
+
+    .Icon {
+        margin-top: 10px;
+        margin-bottom: 10px;
+        color: #FFF;
+        font-size: 50px;
+        text-align: center;
+    }
+
+    .opcioncontra {
+        text-align: center;
+        margin-top: 20px;
+        font-size: 14px;
+    }
+
+    #errorView {
+        text-align: center;
+        color: #1830eb;
+        font-family: Arial, sans-serif;
+        font-size: 12px;
+    }
+</style>
