--- a/ProyectoInventarioWeb/Views/Categorias/List.cshtml
+++ b/ProyectoInventarioWeb/Views/Categorias/List.cshtml
@@ -4,25 +4,34 @@
     Layout = null;
 }
 
+<style type="text/css">
+    .thead-dark th {
+        background: #343a40;
+        color: white;
+        border-color: None;
+    }
+</style>
 
 <table class="table table-striped">
-    <thead>
+    <thead class="thead-dark">
         <tr>
             <th scope="col">ID</th>
             <th scope="col">Codigo</th>
             <th scope="col">Nombre</th>
+            <th scope="col">Editar</th>
+            <th scope="col">Eliminar</th>
         </tr>
     </thead>
     <tbody>
         @foreach (var oCategoria in Model)
         {
-        <tr>
-            <th scope="row">@oCategoria.ID</th>
-            <th>@oCategoria.Codigo</th>
-            <td>@oCategoria.Nombre</td>
-            <td><input type="button" value="Editar" onclick="document.location.href='@Url.Content("~/Categorias/Edit/?id= " + oCategoria.ID)'" /></td>
-            <td><input type="button" value="Eliminar" onclick="jsDelete(@oCategoria.ID)" /></td>
-        </tr>
+            <tr>
+                <th scope="row">@oCategoria.ID</th>
+                <th>@oCategoria.Codigo</th>
+                <td>@oCategoria.Nombre</td>
+                <td><input type="button" class="btn btn-primary" value="Editar" onclick="document.location.href='@Url.Content("~/Categorias/Edit/?id= " + oCategoria.ID)'" /></td>
+                <td><button type="button" class="btn btn-default" onclick="jsDelete(@oCategoria.ID)">Eliminar</button></td>
+            </tr>
         }
     </tbody>
 </table>
