--- a/ProyectoInventarioWeb/Views/Marcas/Create.cshtml
+++ b/ProyectoInventarioWeb/Views/Marcas/Create.cshtml
@@ -1,20 +1,17 @@
 ﻿@model ProyectoInventarioWeb.Models.Marca
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Nuevo";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<h2 style="text-align:center;">@ViewBag.Title</h2>
+<hr style="width:100%;" />
 
-<h2>Crear</h2>
-
-
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
-        <h4>Marca</h4>
-        <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
             @Html.LabelFor(model => model.nombre_marca, htmlAttributes: new { @class = "control-label col-md-2" })
