--- a/ProyectoInventarioWeb/Views/Modelos/List.cshtml
+++ b/ProyectoInventarioWeb/Views/Modelos/List.cshtml
@@ -4,13 +4,22 @@
     Layout = null;
 }
 
+<style type="text/css">
+    .thead-dark th {
+        background: #343a40;
+        color: white;
+        border-color: None;
+    }
+</style>
 
 <table class="table table-striped">
-    <thead>
+    <thead class="thead-dark">
         <tr>
             <th scope="col">ID</th>
             <th scope="col">Codigo</th>
-            <th scope="col">Nombre de Modelo</th>
+            <th scope="col">Nombre</th>
+            <th scope="col">Editar</th>
+            <th scope="col">Eliminar</th>
         </tr>
     </thead>
     <tbody>
@@ -20,8 +29,8 @@
                 <th scope="row">@oModelo.ID</th>
                 <th>@oModelo.Codigo</th>
                 <td>@oModelo.Nombre</td>
-                <td><input type="button" value="Editar" onclick="document.location.href='@Url.Content("~/Modelos/Edit/?id= " + oModelo.ID)'" /></td>
-                <td><input type="button" value="Eliminar" onclick="jsDelete(@oModelo.ID)" /></td>
+                <td><input type="button" class="btn btn-primary" value="Editar" onclick="document.location.href='@Url.Content("~/Modelos/Edit/?id= " + oModelo.ID)'" /></td>
+                <td><input type="button" class="btn btn-default" value="Eliminar" onclick="jsDelete(@oModelo.ID)" /></td>
             </tr>
         }
     </tbody>
