--- a/ProyectoInventarioWeb/Views/Productos/Edit.cshtml
+++ b/ProyectoInventarioWeb/Views/Productos/Edit.cshtml
@@ -4,54 +4,58 @@
 @{
     ViewBag.Title = "Editar";
 }
+<h2 style="text-align:center;">@ViewBag.Title</h2>
+<hr style="width:100%;" />
 
-<h2>@ViewBag.Title</h2>
-
+@Styles.Render("~/Content/style.css")
 <form>
-    <div class="row">
-        @Html.HiddenFor(d => d.ID, new { id = "id" })
-        <div class="form-group">
-            @Html.LabelFor(d => d.Nombre)
-            @Html.TextBoxFor(d => d.Nombre, new { id = "name" })
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(d => d.SKU)
-            @Html.TextBoxFor(d => d.SKU, new { id = "sku" })
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(d => d.Precio)
-            @Html.TextBoxFor(d => d.Precio, new { id = "precio" })
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(d => d.Existencia)
-            @Html.TextBoxFor(d => d.Existencia, new { id = "existencia" })
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(d => d.idCategoria)
-            @Html.TextBoxFor(d => d.idCategoria, new { id = "idcategoria" })
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(d => d.idMarca)
-            @Html.TextBoxFor(d => d.idMarca, new { id = "idmarca" })
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(d => d.idModelo)
-            @Html.TextBoxFor(d => d.idModelo, new { id = "idmodelo" })
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(d => d.Año)
-            @Html.TextBoxFor(d => d.Año, new { id = "año" })
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(d => d.idProveedor)
-            @Html.TextBoxFor(d => d.idProveedor, new { id = "idproveedor" })
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(d => d.Descripcion)
-            @Html.TextBoxFor(d => d.Descripcion, new { id = "descripcion" })
-        </div>
 
-        <input type="button" value="Guardar" onclick="jsEdit()" />
+    <div class="contenedor-inputs">
+        @Html.HiddenFor(d => d.ID, new { id = "id" })
+        <div class="input-grup">
+            @Html.LabelFor(d => d.Nombre)
+            @Html.TextBoxFor(d => d.Nombre, new { id = "name", @class = "input" })
+        </div>
+        <div class="input-grup">
+            @Html.LabelFor(d => d.SKU)
+            @Html.TextBoxFor(d => d.SKU, new { id = "sku", @class = "input" })
+        </div>
+        <div class="input-grup">
+            @Html.LabelFor(d => d.Precio)
+            @Html.TextBoxFor(d => d.Precio, new { id = "precio", @class = "input" })
+        </div>
+        <div class="input-grup">
+            @Html.LabelFor(d => d.Existencia)
+            @Html.TextBoxFor(d => d.Existencia, new { id = "existencia", @class = "input" })
+        </div>
+        <div class="input-grup">
+            @Html.LabelFor(d => d.idCategoria)
+            @Html.TextBoxFor(d => d.idCategoria, new { id = "idcategoria", @class = "input" })
+        </div>
+        <div class="input-grup">
+            @Html.LabelFor(d => d.idMarca)
+            @Html.TextBoxFor(d => d.idMarca, new { id = "idmarca", @class = "input" })
+        </div>
+        <div class="input-grup">
+            @Html.LabelFor(d => d.idModelo)
+            @Html.TextBoxFor(d => d.idModelo, new { id = "idmodelo", @class = "input" })
+        </div>
+        <div class="input-grup">
+            @Html.LabelFor(d => d.Año)
+            @Html.TextBoxFor(d => d.Año, new { id = "año", @class = "input" })
+        </div>
+        <div class="input-grup">
+            @Html.LabelFor(d => d.idProveedor)
+            @Html.TextBoxFor(d => d.idProveedor, new { id = "idproveedor", @class = "input" })
+        </div>
+        <div class="input-grup">
+            @Html.LabelFor(d => d.Descripcion)
+            @Html.TextBoxFor(d => d.Descripcion, new { id = "descripcion", @class = "input" })
+        </div>
+        <div class="input-grup">
+            <button type="button" class="btn btn-primary" onclick="jsEdit()" style="margin: 10px"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Guardar Cambios</font></font></button>
+            <a type="button" class="btn btn-primary" href="@Url.Content("~/Productos")" style="margin:10px; background: Crimson; border:none;"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Cancelar</font></font></a>
+        </div>
     </div>
 </form>
 
