--- a/ProyectoInventarioWeb/Views/Shared/_Layout.cshtml
+++ b/ProyectoInventarioWeb/Views/Shared/_Layout.cshtml
@@ -118,16 +118,20 @@
 
     <div class="sidenav">
         <a href="@Url.Content("~/Home/")" style=" color: white; margin: 15px 0px; border-left: 3px solid #3c8dbc;"><i class="fa fa-dashboard" style="font-size: 15px; margin-right: 8px;"></i>Panel de Control</a>
-        <button class="dropdown-btn">
-            <i class="fa fa-laptop" style="font-size: 15px; margin-right: 8px;"></i>
-            Mantenimiento
-            <i class="fa fa-caret-down"></i>
-        </button>
-        <div class="dropdown-container">
-            @Html.ActionLink("General", "index", "Empresa", new { area = "" }, new { @class = "a" })
-            @Html.ActionLink("Usuarios", "index", "Usuarios", new { area = "" }, new { @class = "a" })
-            @Html.ActionLink("Administrador", "Detalle", "Usuarios", new { area = "" }, new { @class = "a" })
-        </div>
+        @if (Convert.ToString(Session["RolUsuario"]) == "1")
+        {
+            <button class="dropdown-btn">
+                <i class="fa fa-laptop" style="font-size: 15px; margin-right: 8px;"></i>
+                Mantenimiento
+                <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-container">
+                @Html.ActionLink("General", "index", "Empresa", new { area = "" }, new { @class = "a" })
+                @Html.ActionLink("Usuarios", "index", "Usuarios", new { area = "" }, new { @class = "a" })
+                @Html.ActionLink("Administrador", "Detalle", "Usuarios", new { area = "" }, new { @class = "a" })
+            </div>
+        }
+
         <button class="dropdown-btn">
             <i class="fa fa-edit" style="font-size: 15px; margin-right: 8px;"></i>
             Inventario General
@@ -136,18 +140,26 @@
         <div class="dropdown-container">
             @Html.ActionLink("Productos", "index", "Productos", new { area = "" }, new { @class = "a" })
             @Html.ActionLink("Categorias", "index", "Categorias", new { area = "" }, new { @class = "a" })
-            @Html.ActionLink("Modelos", "index", "Modelos", new { area = "" }, new { @class = "a" })
-            @Html.ActionLink("Marcas", "index", "Marcas", new { area = "" }, new { @class = "a" })
+            @if (Convert.ToString(Session["RolUsuario"]) == "1")
+            {
+                @Html.ActionLink("Modelos", "index", "Modelos", new { area = "" }, new { @class = "a" })
+                @Html.ActionLink("Marcas", "index", "Marcas", new { area = "" }, new { @class = "a" })
+            }
+
         </div>
-        <button class="dropdown-btn">
-            <i class="fa fa-th" style="font-size: 15px; margin-right: 8px;"></i>
-            Compras
-            <i class="fa fa-caret-down"></i>
-        </button>
-        <div class="dropdown-container">
-            @Html.ActionLink("Proveedores", "index", "Proveedors", new { area = "" }, new { @class = "a" })
-        </div>
-        <a href="#"><i class="fa fa-info-circle" style="font-size: 15px; margin-right: 8px;"></i>Acerca de..</a>
+        @if (Convert.ToString(Session["RolUsuario"]) == "1")
+        {
+            <button class="dropdown-btn">
+                <i class="fa fa-th" style="font-size: 15px; margin-right: 8px;"></i>
+                Compras
+                <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-container">
+                @Html.ActionLink("Proveedores", "index", "Proveedors", new { area = "" }, new { @class = "a" })
+            </div>
+        }
+
+        <a href="@Url.Content("~/Home/About")"><i class="fa fa-info-circle" style="font-size: 15px; margin-right: 8px;"></i>Acerca de..</a>
 
         <a href="@Url.Content("~/Acceso/LogOut")"><i class="fa fa-close" style="font-size: 15px; margin-right: 8px;"></i>Cerrar Sesion</a>
 
