--- a/ProyectoInventarioWeb/Views/Categorias/List.cshtml
+++ b/ProyectoInventarioWeb/Views/Categorias/List.cshtml
@@ -18,20 +18,28 @@
             <th scope="col">ID</th>
             <th scope="col">Codigo</th>
             <th scope="col">Nombre</th>
-            <th scope="col">Editar</th>
-            <th scope="col">Eliminar</th>
+            @if (Convert.ToString(Session["RolUsuario"]) == "1")
+            {
+                <th scope="col">Editar</th>
+                <th scope="col">Eliminar</th>
+            }
+
         </tr>
     </thead>
     <tbody>
         @foreach (var oCategoria in Model)
         {
-            <tr>
-                <th scope="row">@oCategoria.ID</th>
-                <th>@oCategoria.Codigo</th>
-                <td>@oCategoria.Nombre</td>
+        <tr>
+            <th scope="row">@oCategoria.ID</th>
+            <th>@oCategoria.Codigo</th>
+            <td>@oCategoria.Nombre</td>
+            @if (Convert.ToString(Session["RolUsuario"]) == "1")
+            {
                 <td><input type="button" class="btn btn-primary" value="Editar" onclick="document.location.href='@Url.Content("~/Categorias/Edit/?id= " + oCategoria.ID)'" /></td>
                 <td><button type="button" class="btn btn-default" onclick="jsDelete(@oCategoria.ID)">Eliminar</button></td>
-            </tr>
+            }
+
+        </tr>
         }
     </tbody>
 </table>
